test/invalid/InvalidClassName/InvalidClassName.plume
/**
 * This classe's name contains blank spaces, which must not be allowed
 *
 * @author 37017, Joao Ramalho
 * @version $Id: InvalidClassName.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Invalid Class Name extends Object is

  field radius : Integer
  
  method radius : () -> Integer is
    radius